--- a/pages/tier/kr/index.html
+++ b/pages/tier/kr/index.html
@@ -3,11 +3,12 @@ layout: default
 custom_css: [position-tiers]
 custom_js: [character/spoiler-state]
 custom_data: [/data/character_info.js]
-permalink: /tier/position-tier/
+title: "티어 리스트 - 페르소나5 더 팬텀 X 루페르넷"
+description: "P5X 캐릭터 포지션별 티어 리스트를 확인하세요."
+image: "/assets/img/logo/lufel.png"
 language: kr
-title: 페르소나5 더 팬텀 X 루페르넷 - 티어 리스트
-description: P5X 랭커의 티어 리스트를 확인하세요.
-image: /assets/img/logo/lufel.png
+tier_mode: list
+permalink: /kr/tier/
 alternate_urls:
   ko: /kr/tier/
   en: /en/tier/
