--- a/pages/tier/en/index.html
+++ b/pages/tier/en/index.html
@@ -3,11 +3,12 @@ layout: default
 custom_css: [position-tiers]
 custom_js: [character/spoiler-state]
 custom_data: [/data/character_info.js]
-permalink: /tier/position-tier/
-language: kr
-title: 페르소나5 더 팬텀 X 루페르넷 - 티어 리스트
-description: P5X 랭커의 티어 리스트를 확인하세요.
-image: /assets/img/logo/lufel.png
+title: "Tier List - Persona 5: The Phantom X LufelNet"
+description: "Check P5X character tier list by position."
+image: "/assets/img/logo/lufel.png"
+language: en
+tier_mode: list
+permalink: /en/tier/
 alternate_urls:
   ko: /kr/tier/
   en: /en/tier/
