--- a/pages/schedule/en/index.html
+++ b/pages/schedule/en/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: []
 custom_js: [tooltip]
 custom_data: [/data/character_info.js]
-permalink: /schedule/
-language: en
 title: "Release Schedule - Persona 5 The Phantom X | lufel.net"
-description: "GLB server release schedule for Persona 5 The Phantom X characters."
+description: "Release schedule for Persona 5 The Phantom X characters. Track upcoming character releases, current banners, and patch history."
 image: "/assets/img/home/SEO.png"
+language: en
+permalink: /en/schedule/
 alternate_urls:
   ko: /kr/schedule/
   en: /en/schedule/
