article guide seo1

--- a/pages/article/kr/index.html
+++ b/pages/article/kr/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: []
 custom_js: []
 custom_data: ["/data/character_info.js"]
-permalink: /article/
-language: kr
 title: "가이드 - 페르소나5 더 팬텀 X 루페르넷"
 description: "페르소나5 더 팬텀 X 공략 가이드"
 image: "/assets/img/home/SEO.png"
+language: kr
+permalink: /kr/article/
 alternate_urls:
   ko: /kr/article/
   en: /en/article/
