--- a/pages/gallery/kr/index.html
+++ b/pages/gallery/kr/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: []
 custom_js: []
 custom_data: ["/data/character_info.js"]
-permalink: /gallery/
-language: kr
 title: "갤러리 - P5X 루페르넷"
 description: "P5X 갤러리. 썸네일을 클릭해 원본 이미지를 크게 확인하세요."
 image: "/assets/img/home/SEO.png"
+language: kr
+permalink: /kr/gallery/
 alternate_urls:
   ko: /kr/gallery/
   en: /en/gallery/
