--- a/pages/critical-calc/jp/index.html
+++ b/pages/critical-calc/jp/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: []
 custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/critical-data.js, /data/character_info.js]
-permalink: /critical-calc/
-language: kr
-title: "크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 크리티컬 확률 계산기"
+title: "クリ率計算機 - ペルソナ5 ザ・ファントム X LufelNet"
+description: "ペルソナ5 ザ・ファントム X クリ率計算機"
 image: "/assets/img/home/SEO.png"
+language: jp
+permalink: /jp/critical-calc/
 alternate_urls:
   ko: /kr/critical-calc/
   en: /en/critical-calc/
