--- a/pages/defense-calc/jp/index.html
+++ b/pages/defense-calc/jp/index.html
@@ -4,11 +4,11 @@ custom_css: []
 custom_js: [tooltip, character/spoiler-state, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
   /data/character_info.js]
-permalink: /defense-calc/
-language: kr
-title: "방어력 감소 계산기 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 방어력 감소 계산기"
+title: "防御力減少計算機 - ペルソナ5 ザ・ファントム X LufelNet"
+description: "ペルソナ5 ザ・ファントム X 防御力減少計算機"
 image: "/assets/img/home/SEO.png"
+language: jp
+permalink: /jp/defense-calc/
 alternate_urls:
   ko: /kr/defense-calc/
   en: /en/defense-calc/
