--- a/pages/material-calc/en/index.html
+++ b/pages/material-calc/en/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: [character]
 custom_js: [character/spoiler-state]
 custom_data: []
-permalink: /material-calc/
-language: kr
-title: "육성 계산기 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)"
+title: "Progression Calculator - Persona 5: The Phantom X LufelNet"
+description: "Persona 5: The Phantom X character progression material calculator (level/weapon/skill/mindscape)"
 image: "/assets/img/home/SEO.png"
+language: en
+permalink: /en/material-calc/
 alternate_urls:
   ko: /kr/material-calc/
   en: /en/material-calc/
