--- a/pages/pull-calc/kr/index.html
+++ b/pages/pull-calc/kr/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: []
 custom_js: [tooltip, character/character-list]
 custom_data: [/data/character_info.js]
-permalink: /pull-calc/
-language: kr
 title: "가챠 플래너 - 페르소나5 더 팬텀 X 루페르넷"
 description: "페르소나5 더 팬텀 X 가챠 계획 시뮬레이터. 향후 캐릭터 출시에 맞춰 필요한 재화를 계산하고 계약 계획을 수립할 수 있습니다."
 image: "/assets/img/home/SEO.png"
+language: kr
+permalink: /kr/pull-calc/
 alternate_urls:
   ko: /kr/pull-calc/
   en: /en/pull-calc/
