--- a/pages/pull-tracker/en/index.html
+++ b/pages/pull-tracker/en/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /pull-tracker/
-language: kr
-title: "계약 통계 - 페르소나5 더 팬텀 X"
-description: "P5X 가챠 계약 정보를 기록하고 통계를 확인하세요."
+title: "Pull Tracker - Persona 5: The Phantom X"
+description: "P5X Gacha Pull Tracker"
 image: "/assets/img/home/SEO.png"
+language: en
+pull_tracker_page: individual
+permalink: /en/pull-tracker/
 alternate_urls:
   ko: /kr/pull-tracker/
   en: /en/pull-tracker/
