--- a/pages/pull-tracker/en/url-guide.html
+++ b/pages/pull-tracker/en/url-guide.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /pull-tracker/url-guide/
-language: kr
-title: "Pull Tracker URL 가이드"
-description: "가챠 기록 URL을 얻는 방법 안내"
+title: "Pull Tracker URL Guide"
+description: "How to get your gacha history URL"
 image: "/assets/img/home/SEO.png"
+language: en
+pull_tracker_page: guide
+permalink: /en/pull-tracker/url-guide/
 alternate_urls:
   ko: /kr/pull-tracker/url-guide/
   en: /en/pull-tracker/url-guide/
