--- a/pages/pull-tracker/jp/url-guide.html
+++ b/pages/pull-tracker/jp/url-guide.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /pull-tracker/url-guide/
-language: kr
-title: "Pull Tracker URL 가이드"
-description: "가챠 기록 URL을 얻는 방법 안내"
+title: "Pull Tracker URL ガイド"
+description: "ガチャ履歴URL取得方法の案内"
 image: "/assets/img/home/SEO.png"
+language: jp
+pull_tracker_page: guide
+permalink: /jp/pull-tracker/url-guide/
 alternate_urls:
   ko: /kr/pull-tracker/url-guide/
   en: /en/pull-tracker/url-guide/
