--- a/pages/pull-tracker/en/global-stats.html
+++ b/pages/pull-tracker/en/global-stats.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /pull-tracker/global-stats/
-language: kr
-title: "전체 통계 - 페르소나5 더 팬텀 X"
-description: "P5X 계약 전체 통계와 일별 추이를 확인하세요."
+title: "Global Stats - Persona 5: The Phantom X"
+description: "View P5X global gacha statistics and daily trends."
 image: "/assets/img/home/SEO.png"
+language: en
+pull_tracker_page: global
+permalink: /en/pull-tracker/global-stats/
 alternate_urls:
   ko: /kr/pull-tracker/global-stats/
   en: /en/pull-tracker/global-stats/
