--- a/pages/astrolabe/cn/index.html
+++ b/pages/astrolabe/cn/index.html
@@ -2,11 +2,12 @@
 layout: default
 custom_css: []
 custom_js: []
-permalink: /astrolabe/
-language: kr
-title: "성좌의 시련 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe) 정보"
+custom_data: []
+title: "天域星盘"
+description: "女神异闻录5: 夜幕魅影 - 天域星盘 信息"
 image: "/assets/img/home/SEO.png"
+language: cn
+permalink: /cn/astrolabe/
 alternate_urls:
   ko: /kr/astrolabe/
   en: /en/astrolabe/
