--- a/pages/astrolabe/jp/index.html
+++ b/pages/astrolabe/jp/index.html
@@ -2,11 +2,12 @@
 layout: default
 custom_css: []
 custom_js: []
-permalink: /astrolabe/
-language: kr
-title: "성좌의 시련 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe) 정보"
+custom_data: []
+title: "アストロラーベの試練"
+description: "ペルソナ5・ザ・ファントムX - アストロラーベの試練 情報"
 image: "/assets/img/home/SEO.png"
+language: jp
+permalink: /jp/astrolabe/
 alternate_urls:
   ko: /kr/astrolabe/
   en: /en/astrolabe/
