--- a/pages/astrolabe/kr/index.html
+++ b/pages/astrolabe/kr/index.html
@@ -2,11 +2,12 @@
 layout: default
 custom_css: []
 custom_js: []
-permalink: /astrolabe/
-language: kr
-title: "성좌의 시련 - 페르소나5 더 팬텀 X 루페르넷"
+custom_data: []
+title: "성좌의 시련"
 description: "페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe) 정보"
 image: "/assets/img/home/SEO.png"
+language: kr
+permalink: /kr/astrolabe/
 alternate_urls:
   ko: /kr/astrolabe/
   en: /en/astrolabe/
