--- a/pages/astrolabe/en/index.html
+++ b/pages/astrolabe/en/index.html
@@ -2,11 +2,12 @@
 layout: default
 custom_css: []
 custom_js: []
-permalink: /astrolabe/
-language: kr
-title: "성좌의 시련 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe) 정보"
+custom_data: []
+title: "Trial of the Astrolabe"
+description: "Persona 5: The Phantom X - Trial of the Astrolabe Information"
 image: "/assets/img/home/SEO.png"
+language: en
+permalink: /en/astrolabe/
 alternate_urls:
   ko: /kr/astrolabe/
   en: /en/astrolabe/
