--- a/pages/revelations/en/index.html
+++ b/pages/revelations/en/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: [revelations]
 custom_js: []
 custom_data: []
-permalink: /revelations/
-language: kr
-title: "계시 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X의 계시 정보. 세트 효과와 추가 효과를 확인하세요."
+title: "Revelations Card Guide - Persona 5: The Phantom X LufelNet"
+description: "Revelation information for Persona 5: The Phantom X. Check set effects and additional effects."
 image: "/assets/img/home/SEO.png"
+language: en
+permalink: /en/revelations/
 alternate_urls:
   ko: /kr/revelations/
   en: /en/revelations/
