--- a/pages/revelations/jp/index.html
+++ b/pages/revelations/jp/index.html
@@ -3,11 +3,11 @@ layout: default
 custom_css: [revelations]
 custom_js: []
 custom_data: []
-permalink: /revelations/
-language: kr
-title: "계시 - 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X의 계시 정보. 세트 효과와 추가 효과를 확인하세요."
+title: "啓示 - ペルソナ5 ザ・ファントム X LufelNet"
+description: "ペルソナ5 ザ・ファントム Xの啓示情報。セット効果と追加効果をご確認ください。"
 image: "/assets/img/home/SEO.png"
+language: jp
+permalink: /jp/revelations/
 alternate_urls:
   ko: /kr/revelations/
   en: /en/revelations/
