--- a/pages/character/en/index.html
+++ b/pages/character/en/index.html
@@ -1,25 +1,27 @@
 ---
-layout: default
-custom_css: [character]
-custom_js: [character/spoiler-state]
-title: "Character Build Guide - Persona 5: The Phantom X LufelNet"
-description: "Character development guide for Persona 5: The Phantom X. Check recommended setup, skills, awareness, and exclusive weapon info."
-image: "/assets/img/home/SEO_character.png"
-language: en
+layout: null
 permalink: /en/character/
-alternate_urls:
-  ko: /kr/character/
-  en: /en/character/
-  jp: /jp/character/
+sitemap: false
 ---
-<script>
-(function () {
-  var params = new URLSearchParams(window.location.search || "");
-  params.set("lang", "en");
-  var query = params.toString();
-  var next = "/character/" + (query ? ("?" + query) : "");
-  window.location.replace(next);
-})();
-</script>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="robots" content="noindex,nofollow">
+  <title>Character Build Guide - Persona 5: The Phantom X LufelNet</title>
+  <meta name="description" content="Character development guide for Persona 5: The Phantom X. Check recommended setup, skills, awareness, and exclusive weapon info.">
+</head>
+<body>
+  <script>
+    (function () {
+      var params = new URLSearchParams(window.location.search || "");
+      params.set("lang", "en");
+      var query = params.toString();
+      var next = "/character/" + (query ? ("?" + query) : "");
+      window.location.replace(next);
+    })();
+  </script>
   <noscript><meta http-equiv="refresh" content="0; url=/character/?lang=en"></noscript>
   <a href="/character/?lang=en">Continue</a>
+</body>
+</html>
