--- a/pages/character/jp/index.html
+++ b/pages/character/jp/index.html
@@ -1,25 +1,27 @@
 ---
-layout: default
-custom_css: [character]
-custom_js: [character/spoiler-state]
-title: "怪盗育成ガイド - ペルソナ5: The Phantom X LufelNet"
-description: "ペルソナ5: The Phantom Xの怪盗育成ガイド。推奨セット、スキル、意識、専用武器情報を確認できます。"
-image: "/assets/img/home/SEO_character.png"
-language: jp
+layout: null
 permalink: /jp/character/
-alternate_urls:
-  ko: /kr/character/
-  en: /en/character/
-  jp: /jp/character/
+sitemap: false
 ---
-<script>
-(function () {
-  var params = new URLSearchParams(window.location.search || "");
-  params.set("lang", "jp");
-  var query = params.toString();
-  var next = "/character/" + (query ? ("?" + query) : "");
-  window.location.replace(next);
-})();
-</script>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="robots" content="noindex,nofollow">
+  <title>怪盗育成ガイド - ペルソナ5: The Phantom X LufelNet</title>
+  <meta name="description" content="ペルソナ5: The Phantom Xの怪盗育成ガイド。推奨セット、スキル、意識、専用武器情報を確認できます。">
+</head>
+<body>
+  <script>
+    (function () {
+      var params = new URLSearchParams(window.location.search || "");
+      params.set("lang", "jp");
+      var query = params.toString();
+      var next = "/character/" + (query ? ("?" + query) : "");
+      window.location.replace(next);
+    })();
+  </script>
   <noscript><meta http-equiv="refresh" content="0; url=/character/?lang=jp"></noscript>
   <a href="/character/?lang=jp">Continue</a>
+</body>
+</html>
