--- a/pages/home/kr/index.html
+++ b/pages/home/kr/index.html
@@ -3,8 +3,8 @@ layout: default
 custom_css: [tactic-posts]
 custom_js: [tactic-preview, /tactic/share]
 custom_data: [/data/character_info.js]
-title: "루페르넷 - 페르소나5 더 팬텀 X"
-description: "페르소나5 더 팬텀 X 공략 사이트. 괴도 육성, 페르소나, 계시, 택틱 메이커 등 다양한 정보를 제공합니다."
+title: "Lufelnet 루페르넷 - 페르소나5 더 팬텀 X"
+description: "P5X 공략 사이트. 괴도 육성, 페르소나, 계시, 택틱 메이커 등 다양한 정보를 제공합니다."
 image: "/assets/img/home/SEO.png"
 language: kr
 permalink: /kr/
