--- a/pages/home/en/index.html
+++ b/pages/home/en/index.html
@@ -4,7 +4,7 @@ custom_css: [tactic-posts]
 custom_js: [tactic-preview, /tactic/share]
 custom_data: [/data/character_info.js]
 title: "Lufelnet - Persona 5: The Phantom X"
-description: "Comprehensive guide for Persona 5: The Phantom X. Wiki, Characters, Personas, skills, and strategy guides all in one place."
+description: "Comprehensive guide for P5X. Wiki, Characters, Personas, skills, and strategy guides all in one place."
 image: "/assets/img/home/SEO.png"
 language: en
 permalink: /en/
