--- a/pages/home/jp/index.html
+++ b/pages/home/jp/index.html
@@ -4,7 +4,7 @@ custom_css: [tactic-posts]
 custom_js: [tactic-preview, /tactic/share]
 custom_data: [/data/character_info.js]
 title: "Lufelnet - ペルソナ5 ザ・ファントム X"
-description: "ペルソナ5 ザ・ファントム Xの総合攻略サイト。怪盗、ペルソナ、スキル、戦略ガイドを一箇所で確認できます。"
+description: "P5Xの総合攻略サイト。怪盗、ペルソナ、スキル、戦略ガイドを一箇所で確認できます。"
 image: "/assets/img/home/SEO.png"
 language: jp
 permalink: /jp/
