--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -7,8 +7,8 @@ language: kr
 title: 원더 무기 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X의 원더 무기 정보
 alternate_urls:
-en: /wonder-weapon/?lang=en
-jp: /wonder-weapon/?lang=jp
+en: /en/wonder-weapon/
+jp: /jp/wonder-weapon/
 ---
 
 {% include wonder-weapon-body.html %}
